# warpcompress

./: Dockerfile  README.md  bench.py  pyproject.toml
.github/workflows/: crossbench.yml  publish-ghcr.yml  publish-pypi.yml
src/warpcompress/: __init__.py  cli.py  core.py  dictutil.py  pack.py  stream.py
tests/: benchmark_vs_zlib.py  test_roundtrip.py
