[build-system]
requires = ["setuptools>=69", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "warpcompress"
version = "0.1.4"                  # <-- bumped
description = "Fast, parallel, lossless compression with mmap scatter–gather I/O."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Shakeeb Salman", email = "you@example.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: System :: Archiving :: Compression",
  "Intended Audience :: Developers"
]

dependencies = [
  "zstandard>=0.22",
  "lz4>=4.3",
  "python-snappy>=0.7",
  "brotli>=1.1"
]

[project.optional-dependencies]
hashes = ["blake3>=0.4", "xxhash>=3.4", "cramjam>=2.7"]  # optional extras

[project.scripts]
warp-compress = "warpcompress.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[project.urls]
Homepage = "https://github.com/shakeeb1532/warpcompress"
Issues = "https://github.com/shakeeb1532/warpcompress/issues"

