[project]
name = "warpcompress"
version = "0.7.4"
description = "WarpCompress: adaptive, parallel (de)compression in pure Python with RAW/ZERO/LZ4/Snappy/Zstd per chunk, hybrid Zstd, and batched I/O."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Shakeeb", email = "you@example.com" }]

dependencies = [
  "python-snappy>=0.7.1",
  "lz4>=4.3.2",
  "zstandard>=0.22.0",
  "brotli>=1.1.0",
]

[project.optional-dependencies]
hashes = ["xxhash>=3.0.0"]

[project.scripts]
warp-compress = "warpcompress.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


